--- a/pandas_estudos.ipynb
+++ b/pandas_estudos.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1CG-HNZ0Yc8iznht9JSkLhcEUfy7bDaB5",
-      "authorship_tag": "ABX9TyPT13Lm9MrnOaijF78iMv1R",
+      "authorship_tag": "ABX9TyMH5oaL9X1N8IfvZviKaGEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,6 +139,35 @@
             "0    1\n",
             "1    4\n",
             "2    6\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1, 3, 5]\n",
+        "\n",
+        "temp = pd.Series(a, index = [\"x\", \"y\", \"z\"]) # Nomeando nossos rotúlos\n",
+        "print(temp)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0F3KhTjvEo_g",
+        "outputId": "4b4c6edc-0dd2-4735-bc35-764bc389273c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x    1\n",
+            "y    3\n",
+            "z    5\n",
             "dtype: int64\n"
           ]
         }
